## Process this file with automake to produce Makefile.in

SUBDIRS = src man @MSUBDIRS@ icons

EXTRA_DIST = pavuk.spec pavukrc.sample \
	pavuk_authinfo.sample pavuk.desktop pavuk-gtkrc \
	INSTALL README README.win32 \
	NEWS TODO CREDITS COPYING ABOUT-NLS BUGS MAILINGLIST \
	wget-pavuk.HOWTO ChangeLog \
	button_icons/README \
	button_icons/examplerc \
	button_icons/frederic/break.xpm \
	button_icons/frederic/configure.xpm \
	button_icons/frederic/continue.xpm \
	button_icons/frederic/exit.xpm \
	button_icons/frederic/gobg.xpm \
	button_icons/frederic/restart.xpm \
	button_icons/frederic/stop.xpm \
	button_icons/gnome/break.xpm \
	button_icons/gnome/configure.xpm \
	button_icons/gnome/continue.xpm \
	button_icons/gnome/exit.xpm \
	button_icons/gnome/gobg.xpm \
	button_icons/gnome/restart.xpm \
	button_icons/gnome/stop.xpm \
	button_icons/old/break.xpm \
	button_icons/old/configure.xpm \
	button_icons/old/continue.xpm \
	button_icons/old/exit.xpm \
	button_icons/old/gobg.xpm \
	button_icons/old/restart.xpm \
	button_icons/old/stop.xpm \
	scripts/pavuk.sh \
	scripts/tperf.sh

bin_SCRIPTS = \
	scripts/pavuk.sh \
	scripts/tperf.sh
